added email and upi test

--- a/index.html
+++ b/index.html
@@ -828,6 +828,20 @@
               <div class="field is-grouped is-grouped-multiline">
                 <div class="control">
                   <div class="tags has-addons">
+                    <span class="tag is-dark">Email</span>
+                    <span class="tag is-success"
+                      ><a
+                        href="mailto:sk.sagarkhan95@gmail.com"
+                        target="_blank"
+                        >sk.sagarkhan95@gmail.com</a
+                      ></span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="field is-grouped is-grouped-multiline">
+                <div class="control">
+                  <div class="tags has-addons">
                     <span class="tag is-dark">Skype</span>
                     <span class="tag is-success"
                       ><a
@@ -893,6 +907,7 @@
                   </div>
                 </div>
               </div>
+              <a href="upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=10.17"> UPI </a>
             </h2>
           </div>
         </div>
