--- a/index.html
+++ b/index.html
@@ -907,7 +907,6 @@
                   </div>
                 </div>
               </div>
-              <a href="upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=10.17"> UPI </a>
             </h2>
           </div>
         </div>
@@ -925,6 +924,7 @@
           },
         },
       });
+      navigator.getInstalledRelatedApps().then((res) => console.log(res))
     </script>
   </body>
 </html>
