added UPI intent

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Sagar Khan - Full Stack Dev</title>
     <style type="text/css">
       html {
-          background-color: #0fb4d4 !important;
+        background-color: #0fb4d4 !important;
       }
       svg:not(:root).svg-inline--fa {
         overflow: visible;
@@ -830,9 +830,7 @@
                   <div class="tags has-addons">
                     <span class="tag is-dark">Email</span>
                     <span class="tag is-success"
-                      ><a
-                        href="mailto:sk.sagarkhan95@gmail.com"
-                        target="_blank"
+                      ><a href="mailto:sk.sagarkhan95@gmail.com" target="_blank"
                         >sk.sagarkhan95@gmail.com</a
                       ></span
                     >
@@ -907,6 +905,19 @@
                   </div>
                 </div>
               </div>
+              <div class="field is-grouped is-grouped-multiline">
+                <div class="control">
+                  <div class="tags has-addons">
+                    <span class="tag is-dark">UPI TEST (Do not click)</span>
+                    <span class="tag is-success"
+                      ><a
+                        href="upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=1.00"
+                        >upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=1.00</a
+                      ></span
+                    >
+                  </div>
+                </div>
+              </div>
             </h2>
           </div>
         </div>
@@ -924,7 +935,7 @@
           },
         },
       });
-      navigator.getInstalledRelatedApps().then((res) => console.log(res))
+      navigator.getInstalledRelatedApps().then((res) => console.log(res));
     </script>
   </body>
 </html>
