--- a/index.html
+++ b/index.html
@@ -908,11 +908,11 @@
               <div class="field is-grouped is-grouped-multiline">
                 <div class="control">
                   <div class="tags has-addons">
-                    <span class="tag is-dark">UPI TEST (Do not click)</span>
+                    <span class="tag is-dark">TESTING</span>
                     <span class="tag is-success"
                       ><a
                         href="upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=1.00"
-                        >upi://pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=1.00</a
+                        >UPI TEST (Do not Click)</a
                       ></span
                     >
                   </div>
