--- a/index.html
+++ b/index.html
@@ -918,6 +918,19 @@
                   </div>
                 </div>
               </div>
+              <div class="field is-grouped is-grouped-multiline">
+                <div class="control">
+                  <div class="tags has-addons">
+                    <span class="tag is-dark">TESTING</span>
+                    <span class="tag is-success"
+                      ><a
+                        href="tez://upi/pay?pa=payu@axisbank&pn=SMSPLUS&tr=8312916361&am=1.00"
+                        >GPAY UPI TEST (Do not Click)</a
+                      ></span
+                    >
+                  </div>
+                </div>
+              </div>
             </h2>
           </div>
         </div>
