--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
                   </div>
                 </div>
               </div>
-              <div class="field is-grouped is-grouped-multiline">
+              <!-- <div class="field is-grouped is-grouped-multiline">
                 <div class="control">
                   <div class="tags has-addons">
                     <span class="tag is-dark">TESTING</span>
@@ -938,7 +938,7 @@
                     >
                   </div>
                 </div>
-              </div>
+              </div> -->
             </h2>
           </div>
         </div>
